corrected some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,12 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2em;
     font-family:'Helvetica';
     text-transform: capitalize;
 }
 h2 {
-    font-size: 2em;
+    font-size: 1.5em;
     font-family:'Helvetica';
     text-transform: capitalize;
 }
